--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       top: 0;
       width: 100%;
       background: rgba(255, 255, 255, 0.9);
+      -webkit-backdrop-filter: blur(10px);
       backdrop-filter: blur(10px);
       border-bottom: 1px solid var(--border);
       z-index: 1000;
@@ -676,6 +677,12 @@
       outline: 2px solid var(--primary);
       outline-offset: 2px;
     }
+
+    /* Full-width button for contact form */
+    .btn-block {
+      width: 100%;
+      display: block;
+    }
   </style>
 </head>
 <body>
@@ -891,13 +898,13 @@
         </div>
         <div class="form-group">
           <label for="subject" class="form-label">Subject</label>
-          <input type="text" id="subject" name="subject" class="form-input" required>
-        </div>
-        <div class="form-group">
+        <button type="submit" class="btn btn-primary btn-block">
+          <i class="fas fa-paper-plane"></i> Send Message
+        </button>
           <label for="message" class="form-label">Message</label>
           <textarea id="message" name="message" class="form-input form-textarea" required></textarea>
         </div>
-        <button type="submit" class="btn btn-primary" style="width: 100%;">
+        <buttonbutton type="submit" class="btn btn-primary btn-block">
           <i class="fas fa-paper-plane"></i> Send Message
         </button>
       </form>
@@ -958,12 +965,14 @@
     // Header scroll effect
     window.addEventListener('scroll', function() {
       const header = document.querySelector('header');
-      if (window.scrollY > 100) {
+      if (window.scrollY > 10) {
         header.style.background = 'rgba(255, 255, 255, 0.95)';
         header.style.backdropFilter = 'blur(15px)';
+        header.style.webkitBackdropFilter = 'blur(15px)';
       } else {
         header.style.background = 'rgba(255, 255, 255, 0.9)';
         header.style.backdropFilter = 'blur(10px)';
+        header.style.webkitBackdropFilter = 'blur(10px)';
       }
     });
 
