--- a/index.html
+++ b/index.html
@@ -898,6 +898,7 @@
         </div>
         <div class="form-group">
           <label for="subject" class="form-label">Subject</label>
+          <input type="text" id="subject" name="subject" class="form-input" required>
           <label for="message" class="form-label">Message</label>
           <textarea id="message" name="message" class="form-input form-textarea" required></textarea>
         </div>
