feat: Update button text to enhance clarity in project navigation

--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
             <i class="fas fa-download"></i> Download CV
           </a>
           <a href="#projects" class="btn btn-secondary">
-            <i class="fas fa-rocket"></i> View Projects
+            <i class="fas fa-rocket"></i> View My Projects
           </a>
         </div>
       </div>
