--- a/index.html
+++ b/index.html
@@ -235,22 +235,22 @@
                     </div>
                 </div>
             </div>
-            <form class="contact-form">
+            <form id="contact-form" class="contact-form">
                 <div class="form-group">
                     <label for="name" class="form-label">Full Name</label>
-                    <input type="text" id="name" name="name" class="form-input" required>
+                    <input type="text" id="name" name="name" class="form-input" placeholder="Your Name" required>
                 </div>
                 <div class="form-group">
                     <label for="email" class="form-label">Email Address</label>
-                    <input type="email" id="email" name="email" class="form-input" required>
+                    <input type="email" id="email" name="email" class="form-input" placeholder="Your Email" required>
                 </div>
                 <div class="form-group">
                     <label for="subject" class="form-label">Subject</label>
-                    <input type="text" id="subject" name="subject" class="form-input" required>
+                    <input type="text" id="subject" name="subject" class="form-input" placeholder="Subject" required>
                 </div>
                 <div class="form-group">
                     <label for="message" class="form-label">Message</label>
-                    <textarea id="message" name="message" class="form-input form-textarea" required></textarea>
+                    <textarea id="message" name="message" class="form-input form-textarea" placeholder="Your Message" rows="5" required></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">
                     <i class="fas fa-paper-plane"></i> Send Message
