feat: Add backdrop blur effect to header and remove text-justify property for improved readability

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
         <li><a href="#blog">Blog</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
-      <button class="mobile-menu-btn">
+      <buttonbutton class="mobile-menu-btn" aria-label="Open mobile menu">
         <i class="fas fa-bars"></i>
       </button>
     </nav>
@@ -227,7 +227,7 @@
           <label for="message" class="form-label">Message</label>
           <textarea id="message" name="message" class="form-input form-textarea" required></textarea>
         </div>
-        <button type="submit" class="btn btn-primary" style="width: 100%;">
+        <buttonbutton type="submit" class="btn btn-primary contact-submit-btn">
           <i class="fas fa-paper-plane"></i> Send Message
         </button>
       </form>
