Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                     <img src="profile_picture.jpg" alt="Peter Blessings Kaphaso" class="profile-img">
                     <h3>Full-Stack Developer</h3>
                     <p>Passionate about creating innovative solutions</p>
+                    <p class="profile-location">Salima, Malawi</p>
                     <div class="social-preview">
                         <a href="https://github.com/blessingskaphaso" class="social-icon" aria-label="GitHub">
                             <i class="fab fa-github"></i>
@@ -111,11 +112,25 @@
         </div>
         <div class="container">
             <div class="about-content">
-                <p>I'm a passionate full-stack developer with expertise in modern web and mobile technologies.</p>
+                <p>I'm a passionate full-stack developer with expertise in modern web and mobile technologies. With years of experience in software development, I've worked on various projects ranging from mobile applications to enterprise web systems. My journey in technology has been driven by a desire to solve real-world problems through innovative solutions.</p>
+                <p>I specialize in building scalable applications using Flutter for mobile development, Laravel for backend systems, and modern JavaScript frameworks for frontend development. My approach combines technical expertise with user-centered design to create applications that are both functional and delightful to use.</p>
                 <div class="read-more-content" id="aboutContent">
-                    <p>With years of experience in software development, I've worked on various projects ranging from mobile applications to enterprise web systems. My journey in technology has been driven by a desire to solve real-world problems through innovative solutions.</p>
-                    
-                    <p>I specialize in Flutter for mobile development, Laravel for backend systems, and modern JavaScript frameworks for frontend development. My approach combines technical expertise with user-centered design to create applications that are both functional and delightful to use.</p>
+                    <p>My journey in technology began with a fascination for how software can transform lives. Over the years, I've honed my skills in various programming languages and frameworks, allowing me to build robust applications that meet user needs and business goals.</p>
+                    <p>As a full-stack developer, I thrive on the challenge of creating seamless user experiences across platforms. I enjoy working with both frontend and backend technologies, ensuring that every application I build is not only functional but also intuitive and engaging.</p>
+                    <p>My expertise includes:</p>
+                    <ul>
+                        <li>Flutter for cross-platform mobile app development</li>
+                        <li>Laravel for building scalable backend systems</li>
+                        <li>JavaScript frameworks like React and Vue.js for dynamic web applications</li>
+                        <li>RESTful APIs and database management with MySQL</li>
+                        <li>Version control with Git and collaborative development practices</li>
+                    </ul>
+                    <p>Throughout my career, I've had the privilege of working on diverse projects, including:</p>
+                    <ul>
+                        <li>Developing the Msacco App, a mobile solution for financial management in SACCOs</li>
+                        <li>Creating the MDF CSC LMS, a Learning Management System for the Malawi Defence Force</li>
+                        <li>Building the NeuroTech Systems Limited corporate website to showcase their technological solutions</li>
+                    </ul>
                     
                     <p>When I'm not coding, I enjoy exploring new technologies, contributing to open-source projects, and sharing knowledge with the developer community.</p>
                 </div>
@@ -141,8 +156,10 @@
                     <h3 class="project-title">Msacco App</h3>
                 </div>
                 <p class="project-description">
-                    A comprehensive mobile application designed to simplify financial management for Msilikali SACCOs. 
+                    A comprehensive mobile application designed to simplify financial management for Msilikali SACCO.
                     Features secure transaction processing, loan management, and real-time account monitoring.
+                    The app enhances user experience with a clean interface and robust backend integration,
+                    ensuring reliability and performance for MSACCO members.
                 </p>
                 <div class="project-tech">
                     <span class="tech-tag">Flutter</span>
@@ -168,6 +185,8 @@
                     A comprehensive Learning Management System developed for the Malawi Defence Force Command and Staff College. 
                     The platform supports course management, assignment submission, performance tracking, and resource sharing, 
                     tailored specifically for military academic training and administrative efficiency.
+                    The LMS integrates advanced features like user authentication, role-based access control, and a responsive design
+                    to ensure a seamless learning experience for both instructors and students.
                 </p>
                 <div class="project-tech">
                     <span class="tech-tag">React</span>
@@ -185,10 +204,12 @@
                     <h3 class="project-title">NeuroTech Systems Limited Website</h3>
                 </div>
                 <p class="project-description">
-                    A modern corporate website designed for NeuroTech Systems Limited to showcase their technological 
-                    solutions, services, and industry expertise. The platform features responsive design, interactive 
-                    data visualizations, and secure content management, offering an intuitive experience for both 
+                    A modern corporate website designed for NeuroTech Systems Limited to showcase their technological
+                    solutions, services, and industry expertise. The platform features responsive design, interactive
+                    data visualizations, and secure content management, offering an intuitive experience for both
                     clients and administrators.
+                    The website highlights NeuroTech's commitment to innovation and excellence in the tech industry,
+                    providing a professional online presence that reflects their brand values and technological capabilities.
                 </p>
                 <div class="project-tech">
                     <span class="tech-tag">Tailwind CSS</span>
