--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <nav class="navbar">
             <div class="nav-container">
                 <a href="#home" class="nav-logo">
-                    <span class="logo-text">PBK</span>
+                    <img src="assets/logo.png" alt="Peter Blessings Kaphaso" class="logo-image">
                 </a>
                 
                 <ul class="nav-menu" id="nav-menu">
@@ -83,7 +83,7 @@
                                 <i class="fas fa-envelope"></i>
                                 Get In Touch
                             </a>
-                            <a href="assets/Peter_Blessings_CV.pdf" download class="btn btn-secondary">
+                            <a href="assets/bless.pdf" download class="btn btn-secondary">
                                 <i class="fas fa-download"></i>
                                 Download CV
                             </a>
@@ -105,20 +105,20 @@
                     </div>
                     <div class="hero-image">
                         <div class="image-container">
-                            <img src="assets/profile-picture.jpg" alt="Peter Blessings Kaphaso - Full-Stack Developer" class="profile-image">
+                            <img src="assets/profile_picture.jpg" alt="Peter Blessings Kaphaso - Full-Stack Developer" class="profile-image">
                             <div class="image-backdrop"></div>
                         </div>
                         <div class="hero-stats">
                             <div class="stat-item">
-                                <span class="stat-number">5+</span>
+                                <span class="stat-number">2+</span>
                                 <span class="stat-label">Years Experience</span>
                             </div>
                             <div class="stat-item">
-                                <span class="stat-number">50+</span>
+                                <span class="stat-number">3+</span>
                                 <span class="stat-label">Projects Completed</span>
                             </div>
                             <div class="stat-item">
-                                <span class="stat-number">30+</span>
+                                <span class="stat-number">3+</span>
                                 <span class="stat-label">Happy Clients</span>
                             </div>
                         </div>
@@ -173,7 +173,7 @@
                                 <i class="fas fa-briefcase"></i>
                                 <div>
                                     <h4>Experience</h4>
-                                    <p>5+ Years Professional</p>
+                                    <p>2+ Years Professional</p>
                                 </div>
                             </div>
                         </div>
@@ -207,25 +207,22 @@
                     <div class="timeline-item">
                         <div class="timeline-marker"></div>
                         <div class="timeline-content">
-                            <h3 class="job-title">Senior Full-Stack Developer</h3>
+                            <h3 class="job-title">Service Delivery Engineer</h3>
                             <p class="company">NeuroTech Systems Limited</p>
-                            <span class="job-period">2022 - Present</span>
+                            <span class="job-period">2023 - 2024</span>
                             <p class="job-description">
-                                Leading development of enterprise web applications and mobile solutions. 
-                                Architected and implemented scalable systems serving thousands of users. 
-                                Mentored junior developers and established coding standards.
+                                Leading development of enterprise web applications.
+                                Architected and implemented scalable systems.
                             </p>
                             <ul class="job-achievements">
-                                <li>Increased application performance by 40% through optimization</li>
-                                <li>Led a team of 5 developers on multiple projects</li>
-                                <li>Implemented CI/CD pipelines reducing deployment time by 60%</li>
+                                <li>Increased organizational performance by 40% through optimization</li>
+                                <li>Led a team of 4 developers on multiple projects</li>
                             </ul>
                             <div class="job-tech">
                                 <span class="tech-tag">React</span>
                                 <span class="tech-tag">Node.js</span>
                                 <span class="tech-tag">Laravel</span>
                                 <span class="tech-tag">Flutter</span>
-                                <span class="tech-tag">AWS</span>
                             </div>
                         </div>
                     </div>
@@ -234,8 +231,8 @@
                         <div class="timeline-marker"></div>
                         <div class="timeline-content">
                             <h3 class="job-title">Full-Stack Developer</h3>
-                            <p class="company">Msilikali SACCO</p>
-                            <span class="job-period">2020 - 2022</span>
+                            <p class="company">Sabali Solution</p>
+                            <span class="job-period">2020 - Present</span>
                             <p class="job-description">
                                 Developed and maintained the Msacco mobile application and web platform. 
                                 Implemented secure financial transaction systems and real-time monitoring dashboards.
@@ -258,8 +255,8 @@
                         <div class="timeline-marker"></div>
                         <div class="timeline-content">
                             <h3 class="job-title">Web Developer</h3>
-                            <p class="company">Malawi Defence Force</p>
-                            <span class="job-period">2019 - 2020</span>
+                            <p class="company">Sabali Solutions</p>
+                            <span class="job-period">2020 - Present</span>
                             <p class="job-description">
                                 Developed the Command and Staff College Learning Management System. 
                                 Created user-friendly interfaces for military training and administration.
@@ -299,7 +296,7 @@
                             <div class="skill-item">
                                 <span class="skill-name">React & Next.js</span>
                                 <div class="skill-bar">
-                                    <div class="skill-progress" data-width="95%"></div>
+                                    <div class="skill-progress" data-width="75%"></div>
                                 </div>
                             </div>
                             <div class="skill-item">
@@ -311,7 +308,7 @@
                             <div class="skill-item">
                                 <span class="skill-name">Vue.js</span>
                                 <div class="skill-bar">
-                                    <div class="skill-progress" data-width="85%"></div>
+                                    <div class="skill-progress" data-width="65%"></div>
                                 </div>
                             </div>
                             <div class="skill-item">
@@ -323,7 +320,7 @@
                             <div class="skill-item">
                                 <span class="skill-name">Tailwind CSS</span>
                                 <div class="skill-bar">
-                                    <div class="skill-progress" data-width="90%"></div>
+                                    <div class="skill-progress" data-width="80%"></div>
                                 </div>
                             </div>
                         </div>
@@ -395,7 +392,7 @@
                             <div class="skill-item">
                                 <span class="skill-name">Firebase</span>
                                 <div class="skill-bar">
-                                    <div class="skill-progress" data-width="85%"></div>
+                                    <div class="skill-progress" data-width="65%"></div>
                                 </div>
                             </div>
                         </div>
@@ -416,7 +413,7 @@
                             <div class="skill-item">
                                 <span class="skill-name">PostgreSQL</span>
                                 <div class="skill-bar">
-                                    <div class="skill-progress" data-width="85%"></div>
+                                    <div class="skill-progress" data-width="75%"></div>
                                 </div>
                             </div>
                             <div class="skill-item">
@@ -428,13 +425,13 @@
                             <div class="skill-item">
                                 <span class="skill-name">AWS</span>
                                 <div class="skill-bar">
-                                    <div class="skill-progress" data-width="80%"></div>
+                                    <div class="skill-progress" data-width="70%"></div>
                                 </div>
                             </div>
                             <div class="skill-item">
                                 <span class="skill-name">Docker</span>
                                 <div class="skill-bar">
-                                    <div class="skill-progress" data-width="75%"></div>
+                                    <div class="skill-progress" data-width="65%"></div>
                                 </div>
                             </div>
                         </div>
@@ -525,7 +522,7 @@
                                     <span class="stat-label">Students</span>
                                 </div>
                                 <div class="stat">
-                                    <span class="stat-number">50+</span>
+                                    <span class="stat-number">10+</span>
                                     <span class="stat-label">Courses</span>
                                 </div>
                             </div>
@@ -534,7 +531,7 @@
                     
                     <div class="project-card">
                         <div class="project-image">
-                            <img src="assets/neurotech-project.jpg" alt="NeuroTech Website Screenshot">
+                            <img src="assets/neurotech-project.png" alt="NeuroTech Website Screenshot">
                             <div class="project-overlay">
                                 <div class="project-links">
                                     <a href="https://neurotechsystemsltd.com" target="_blank" class="project-link">
@@ -581,7 +578,7 @@
         </section>
 
         <!-- Testimonials Section -->
-        <section id="testimonials" class="testimonials">
+        <!--<section id="testimonials" class="testimonials">
             <div class="container">
                 <div class="section-header">
                     <h2 class="section-title">What Clients Say</h2>
@@ -650,7 +647,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <!-- Contact Section -->
         <section id="contact" class="contact">
