--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                     <li class="nav-item">
                         <a href="#projects" class="nav-link">Projects</a>
                     </li>
-                    <li class="nav-item">
+                <!---  <li class="nav-item">
                         <a href="#testimonials" class="nav-link">Testimonials</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a href="#contact" class="nav-link">Contact</a>
                     </li>
