`Removed commented out div elements in index.html`

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                         </div>
                     </div>
                     
-                    <div class="about-image">
+                    <!--<div class="about-image">
                         <img src="assets/about-image.jpg" alt="Peter Kaphaso working" class="about-img">
                         <div class="about-card">
                             <h4>Current Focus</h4>
@@ -189,7 +189,7 @@
                                 <li>Cloud Architecture with AWS</li>
                                 <li>DevOps & CI/CD Implementation</li>
                             </ul>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
