Update job titles and enhance footer styles with responsive design and theme adaptation

--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
                     <div class="timeline-item">
                         <div class="timeline-marker"></div>
                         <div class="timeline-content">
-                            <h3 class="job-title">Full-Stack Developer</h3>
-                            <p class="company">Sabali Solution</p>
+                            <h3 class="job-title">Co-Founder and Developer</h3>
+                            <p class="company">Sabali Solutions</p>
                             <span class="job-period">2020 - Present</span>
                             <p class="job-description">
                                 Developed and maintained the Msacco mobile application and web platform. 
@@ -254,7 +254,7 @@
                     <div class="timeline-item">
                         <div class="timeline-marker"></div>
                         <div class="timeline-content">
-                            <h3 class="job-title">Web Developer</h3>
+                            <h3 class="job-title">Co-Founder and Developer</h3>
                             <p class="company">Sabali Solutions</p>
                             <span class="job-period">2020 - Present</span>
                             <p class="job-description">
@@ -303,12 +303,6 @@
                                 <span class="skill-name">JavaScript/TypeScript</span>
                                 <div class="skill-bar">
                                     <div class="skill-progress" data-width="90%"></div>
-                                </div>
-                            </div>
-                            <div class="skill-item">
-                                <span class="skill-name">Vue.js</span>
-                                <div class="skill-bar">
-                                    <div class="skill-progress" data-width="65%"></div>
                                 </div>
                             </div>
                             <div class="skill-item">
@@ -799,9 +793,7 @@
                     </div>
                     <div class="link-group">
                         <h4>Projects</h4>
-                        <a href="#projects">Portfolio</a>
                         <a href="projects.html">All Projects</a>
-                        <a href="#testimonials">Testimonials</a>
                         <a href="#contact">Contact</a>
                     </div>
                     <div class="link-group">
