--- a/index.html
+++ b/index.html
@@ -294,13 +294,13 @@
                         </div>
                         <div class="skills-list">
                             <div class="skill-item">
-                                <span class="skill-name">React & Next.js</span>
+                                <span class="skill-name">React</span>
                                 <div class="skill-bar">
                                     <div class="skill-progress" data-width="75%"></div>
                                 </div>
                             </div>
                             <div class="skill-item">
-                                <span class="skill-name">JavaScript/TypeScript</span>
+                                <span class="skill-name">JavaScript</span>
                                 <div class="skill-bar">
                                     <div class="skill-progress" data-width="90%"></div>
                                 </div>
@@ -345,12 +345,6 @@
                                 </div>
                             </div>
                             <div class="skill-item">
-                                <span class="skill-name">Python</span>
-                                <div class="skill-bar">
-                                    <div class="skill-progress" data-width="75%"></div>
-                                </div>
-                            </div>
-                            <div class="skill-item">
                                 <span class="skill-name">REST APIs</span>
                                 <div class="skill-bar">
                                     <div class="skill-progress" data-width="95%"></div>
@@ -381,12 +375,6 @@
                                 <span class="skill-name">React Native</span>
                                 <div class="skill-bar">
                                     <div class="skill-progress" data-width="80%"></div>
-                                </div>
-                            </div>
-                            <div class="skill-item">
-                                <span class="skill-name">Firebase</span>
-                                <div class="skill-bar">
-                                    <div class="skill-progress" data-width="65%"></div>
                                 </div>
                             </div>
                         </div>
