Update job titles and testimonials for accuracy and clarity

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <nav class="navbar">
             <div class="nav-container">
                 <a href="#home" class="nav-logo">
-                    <img src="assets/logo.png" alt="Peter Blessings Kaphaso" class="logo-image">
+                    <img src="assets/logo.png" alt="BK" class="logo-image">
                 </a>
                 
                 <ul class="nav-menu" id="nav-menu">
@@ -234,7 +234,7 @@
                             <p class="company">Sabali Solutions</p>
                             <span class="job-period">2020 - Present</span>
                             <p class="job-description">
-                                Developed and maintained the Msacco mobile application and web platform. 
+                                Developed and maintained the Msacco mobile application and web platform.
                                 Implemented secure financial transaction systems and real-time monitoring dashboards.
                             </p>
                             <ul class="job-achievements">
@@ -254,9 +254,9 @@
                     <div class="timeline-item">
                         <div class="timeline-marker"></div>
                         <div class="timeline-content">
-                            <h3 class="job-title">Co-Founder and Developer</h3>
-                            <p class="company">Sabali Solutions</p>
-                            <span class="job-period">2020 - Present</span>
+                            <h3 class="job-title">Developer</h3>
+                            <p class="company">MDF COMMAND AND STAFFF COLLEGE</p>
+                            <span class="job-period">2025 - Present</span>
                             <p class="job-description">
                                 Developed the Command and Staff College Learning Management System. 
                                 Created user-friendly interfaces for military training and administration.
@@ -264,7 +264,7 @@
                             <ul class="job-achievements">
                                 <li>Delivered LMS platform on time and within budget</li>
                                 <li>Trained staff on system usage and maintenance</li>
-                                <li>Implemented role-based access control system</li>
+                                <li>Implemented role-based access control systems</li>
                             </ul>
                             <div class="job-tech">
                                 <span class="tech-tag">React</span>
@@ -562,7 +562,7 @@
                                 <i class="fas fa-quote-left"></i>
                             </div>
                             <p class="testimonial-text">
-                                "Peter delivered an exceptional mobile application for our SACCO. His attention 
+                                "Peter delivered an exceptional mobile application for our MSACCO. His attention 
                                 to detail and understanding of our business needs resulted in a solution that 
                                 exceeded our expectations. The app has significantly improved our operations."
                             </p>
@@ -588,10 +588,10 @@
                             </p>
                         </div>
                         <div class="testimonial-author">
-                            <img src="assets/client2.jpg" alt="Colonel Sarah Mwale" class="author-image">
+                            <img src="assets/client2.jpg" alt="Colonel MAMBO" class="author-image">
                             <div class="author-info">
-                                <h4 class="author-name">Colonel Sarah Mwale</h4>
-                                <p class="author-position">Director, MDF Command & Staff College</p>
+                                <h4 class="author-name">Colonel MAMBO</h4>
+                                <p class="author-position">DIRECTOR OF RESEARCH, MDF Command & Staff College</p>
                             </div>
                         </div>
                     </div>
@@ -608,10 +608,10 @@
                             </p>
                         </div>
                         <div class="testimonial-author">
-                            <img src="assets/client3.jpg" alt="Dr. Michael Phiri" class="author-image">
+                            <img src="assets/client3.jpg" alt="MS SARAH SADIKI" class="author-image">
                             <div class="author-info">
-                                <h4 class="author-name">Dr. Michael Phiri</h4>
-                                <p class="author-position">CTO, NeuroTech Systems</p>
+                                <h4 class="author-name">MS SARAH SADIKI</h4>
+                                <p class="author-position">CEO, NeuroTech Systems</p>
                             </div>
                         </div>
                     </div>
