Update hero section description and add certifications & training highlight

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                             <span class="role">Full-Stack Developer & Founder</span>
                         </h1>
                         <p class="hero-description">
-                            Founder of Sabali Solutions, specializing in building scalable web and mobile applications 
-                            using modern technologies. With expertise in JavaScript, Flutter, and Laravel, I create 
+                            Founder of Sabali Solutions, specializing in Technical Consultation, and building scalable web and mobile applications
+                            using modern technologies. With expertise in JavaScript, Flutter, and Laravel, I create
                             digital solutions that drive business growth and enhance user experiences.
                         </p>
                         <div class="hero-buttons">
@@ -180,6 +180,19 @@
                                 </div>
                             </div>
                         </div>
+                        
+                        <div class="highlight-item">
+                        <i class="fas fa-certificate"></i>
+                        <div>
+                            <h4>Certifications & Training</h4>
+                            <p>
+                                Data Analysis Essentials (Python)<br>
+                                Cyber Security Certificate<br>
+                                Parallel Programming using CUDA<br>
+                                Data Entry & Analysis (SPSS & STATA)
+                            </p>
+                        </div>
+                    </div>
                     </div>
                 </div>
             </div>
