Update certifications and enhance hero section with interactive particle animation

--- a/about.html
+++ b/about.html
@@ -113,10 +113,10 @@
                             <div>
                                 <h4>Certifications & Training</h4>
                                 <p>
-                                    Data Analysis Essentials (Python)<br>
+                                    Data Science Essentials with Python<br>
                                     Cyber Security Certificate<br>
-                                    Parallel Programming using CUDA<br>
-                                    Data Entry & Analysis (SPSS & STATA)
+                                    Fundamentals of Accelerated computing using CUDA C/C++<br>
+                                    Research Data Collection & Analysis (EXCEL, SPSS & STATA)
                                 </p>
                             </div>
                         </div>
