--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peter Blessings Kaphaso - Full-Stack Developer & Founder</title>
-    <meta name="description" content="Professional portfolio of Peter Blessings Kaphaso, founder of Sabali Solutions and skilled full-stack developer specializing in JavaScript, Flutter, and Laravel development.">
+    <meta name="description" content="Peter Blessings Kaphaso, founder of Sabali Solutions and a skilled full-stack developer.">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
