Fix image file extension for profile picture in hero section

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                     </div>
                     <div class="hero-image">
                         <div class="image-container">
-                            <img src="assets/profile_picture.jpg" alt="Peter Blessings Kaphaso" class="profile-image">
+                            <img src="assets/profile_picture.jpeg" alt="Peter Blessings Kaphaso" class="profile-image">
                             <div class="image-backdrop"></div>
                         </div>
                         <div class="hero-stats">
